# HTC_api

./: README.md  pyproject.toml  trainings.json
config/: settings.py  urls.py
days/: admin.py  models.py  serializers.py  urls.py  views.py
days/migrations/: 0001_initial.py
